# VitaShell

./: CMakeLists.txt  adhoc_dialog.c  archive.c  file.c  file.h  io_process.c  main.h  makezip.c  package_installer.c  psarc.c  refresh.c  settings.c  sqlite3.c
audio/: id3.c  mp3player.c  oggplayer.c  player.c  vita_audio.c
minizip/: ioapi.c
modules/kernel/: CMakeLists.txt  main.c
modules/patch/: CMakeLists.txt  main.c
modules/usbdevice/: CMakeLists.txt  main.c
modules/user/: CMakeLists.txt  main.c
updater/: main.c
